<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
    <string name="app_name">EtiquetAR</string>
    <string name="app_picker_name">Applications</string>
    <string name="pdRegister">Registrándose en el servidor</string>
    <string name="registerOk">Acceda a la aplicación con los datos registrados</string>
    <string name="pdLogin">Accediendo al servidor</string>
    <string name="pdProfile">Obteniendo los perfiles del recurso</string>
    <string name="pdResource">Obteniendo el recurso del servidor</string>
    <string name="pdResourceImage">Descargando imagen</string>
    <string name="pdYoutubeVideo">Cargando vídeo de youtube</string>
    <string name="alertDialogNoResourceTitle">Error en el recurso</string>
    <string name="alertDialogNoResource">No existe contenido asociado a ese perfil; por favor, escoge otro.</string>
    <string name="alertDialogErrorURLVideoTitle">Error en la URL del recurso</string>
    <string name="alertDialogErrorURLVideo">La URL no se corresponde con un vídeo válido de YouTube.</string>
    <string name="pdGettingComments">Obtieniendo los comentarios del recurso</string>
    <string name="close">Cerrar</string>
    <string name="errorNoComments">No existen comentarios asociados a este recurso</string>
    <string name="errorNoCommentsTitle">No existen comentarios</string>
    <string name="noComments">No existe ningún comentario. ¡Añade el primero!</string>
    <string name="addNewComment">Añadir nuevo comentario</string>
    <string name="change_email_prefence">Cambiar el correo electrónico</string>
    <string name="use_wifi_only_prefence">Descargar solo con WiFi</string>
    <string name="button_ok">OK</string>
    <string name="button_share_by_email">Compartir por correo electrónico</string>
    <string name="button_share_by_sms">Compartir por SMS</string>
    <string name="button_web_search">Búsqueda Web</string>
    <string name="msg_camera_framework_bug">Lo sentimos, la cámara de Android ha encontrado un problema. Es posible que necesite reiniciar el dispositivo.</string>
    <string name="msg_default_format">Formato</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hola</string>
    <string name="msg_default_status">Coloque un código QR en el interior del rectángulo del visor para escanear.</string>
    <string name="msg_default_time">Tiempo</string>
    <string name="msg_default_type">Tipo</string>
    <string name="msg_intent_failed">Lo sentimos, la aplicación solicitada no pudo ser lanzada. El contenido de código de barras puede ser inválida.</string>
    <string name="msg_share_subject_line">Estos son los contenidos del código de barras que he escaneado</string>
    <string name="result_text">Se ha encontrado un código QR válido</string>
    <string name="cancel">Cancelar</string>
    <string name="no_comments">No existe ningún comentario. ¿Quiéres añadir el primero?</string>
    <string name="no_comments_title">No existen comentarios</string>
    <string name="pdPuttingComment">Guardando el comentario en el servidor</string>
    <string name="incorrect_login">Credenciales incorrectos</string>
    <string name="checkbox_name_for_comment">¿Mostrar nombre de usuario en el comentario?</string>
    <string name="toast_maximun_reach">Has llegado al máximo de caracteres permitidos en un
        comentario
    </string>
    <string name="comment_actions_title">Selecciona una acción</string>
    <string name="comment_action_no_responses">Responder al comentario</string>
    <string name="homeLastViewTags">Últimas etiquetas vistas</string>
    <string name="dashboard_capture_new_tag">Capturar nueva etiqueta</string>
    <string name="dashboard_home">Inicio</string>
    <string name="dashboard_collections">Mis colecciones</string>
    <string name="dashboard_comments">Mis comentarios</string>
    <string name="dashboard_profile">Mi perfil</string>
    <string name="no_tags_title">No se han escaneado etiquetas</string>
    <string name="no_tags">Aún no se ha escaneado ninguna etiqueta. ¿Quiéres escanear la primera?</string>
    <string name="scan">Escanear</string>
    <string name="pdRefreshData">Actualizando los datos del recurso</string>
    <string name="logout">¿Estás seguro que quieres salir de la aplicación?</string>
    <string name="confirm">Confirmar</string>
    <string name="server_not_responding">El servidor no responde. Revise su conexión Wifi.</string>
    <string name="server_not_responding_title">Servidor no responde</string>
    <string name="cb_remember_profile">Recordar el perfil seleccionado para la colección actual</string>
    <string name="data_access_preferences">Datos del usuario</string>
    <string name="change_name_preference">Cambiar el nombre del usuario</string>
    <string name="comment_respond_to">Responder al comentario</string>
    <string name="comment_see_answer_part_1">Ver respuestas (</string>
    <string name="comment_see_answer_part_2">respuestas)</string>
    <string name="comment_delete">Borrar el comentario</string>
    <string name="comment_like_it">Me gusta</string>
    <string name="text_date_part_1">Etiqueta vista el día </string>
    <string name="text_date_part_2">a las</string>
    <string name="goResource">Ver recurso</string>
    <string name="goComments">Ver comentarios</string>
    <string name="text_profile">Etiqueta vista con el perfil</string>
    <string name="text_comments_counter">Número de comentarios:</string>
    <string name="text_view_counter">Visitas al recurso:</string>
    <string name="invalid_tag">El QR escaneado no se corresponde con una etiqueta generada con etiquetAR web. Prueba con otra etiqueta.</string>
    <string name="invalid_tag_title">Etiqueta no válida</string>
    <string name="invalid_youtube_url">La URL no se corresponde con un vídeo de youtube, por lo que no se puede reproducir.</string>
    <string name="invalid_youtube_url_title">Error en el vídeo</string>
    <string name="textNew">nuevos</string>
    <string name="textNewViewCounter">nuevas</string>
    <string name="collectionsLastCollectionsView">Últimas colecciones vistas</string>
    <string name="data_download_preferences">Descarga de contenido</string>
</resources>
